--- a/src/messages/locale_ru_RU.properties
+++ b/src/messages/locale_ru_RU.properties
@@ -1,3 +1,3 @@
-Size.user.username = Username must be between 8 and 15 characters long.
+Size.patient.username = Username must be between 8 and 15 characters long.
 
 
